<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constaintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/zvezdnoe_nebo_zvezdy_kosmos_159791_480x854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/startButton"
                android:layout_width="224dp"
                android:layout_height="67dp"
                android:layout_margin="30dp"
                android:background="@drawable/button_main"
                android:text="@string/start"
                android:textColor="@drawable/text_color_selector"
                android:textSize="28sp" />

            <Button
                android:id="@+id/ruleButton"
                android:layout_width="224dp"
                android:layout_height="67dp"
                android:layout_margin="30dp"

                android:background="@drawable/button_main"
                android:text="@string/rule"
                android:textColor="@drawable/text_color_selector"
                android:textSize="28sp" />

            <Button
                android:id="@+id/statButton"
                android:layout_width="224dp"
                android:layout_height="67dp"
                android:layout_margin="30dp"
                android:background="@drawable/button_main"
                android:text="@string/stat"
                android:textColor="@drawable/text_color_selector"
                android:textSize="28sp" />

            <Button
                android:id="@+id/optionsButton"
                android:layout_width="224dp"
                android:layout_height="67dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="30dp"
                android:background="@drawable/button_main"
                android:text="@string/options"
                android:textColor="@drawable/text_color_selector"
                android:textSize="28sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>