<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/universalTicket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/zvezdnoe_nebo_zvezdy_kosmos_159791_480x854"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/zvezdnoe_nebo_zvezdy_kosmos_159791_480x854"
        android:contentDescription="TODO" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#202230"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_main"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@drawable/text_color_selector"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/text_numberOfTicket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tickets"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container2">


        <LinearLayout
            android:id="@+id/numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true">


            <TextView
                android:id="@+id/text_square1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="3"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"

                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="4"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/text_square5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="5"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="6"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"

                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="7"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square8"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="8"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square9"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="9"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square10"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"

                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="10"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square11"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="11"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square12"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="12"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square13"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="13"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square14"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="14"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square15"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="15"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square16"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="16"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square17"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="17"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square18"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="18"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square19"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="19"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_square20"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/square_tickets"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Сhange"
                android:padding="5dp"
                android:text="20"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fr_place"
        android:name="com.starishko.pdd.Question"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />



</androidx.constraintlayout.widget.ConstraintLayout>